# django-allauth-simple-ui

./: README.md  pyproject.toml
allauth_ui/: adapter.py  admin.py  forms.py  settings.py  signals.py  urls.py  views.py
allauth_ui/locale/vi/LC_MESSAGES/: django.po
allauth_ui/templates/: base_site.html
allauth_ui/templates/account/: account_inactive.html  base.html  email.html  email_change.html  email_confirm.html  home.html  locked.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  profile_form.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
allauth_ui/templates/account/snippets/: header.html  user_tools.html
allauth_ui/templates/socialaccount/snippets/: login.html
testproject/: create_user.py  manage.py  settings.py  urls.py
