[tool.poetry]
name = "django-allauth-simple-ui"
version = "0.1.2"
description = "Simple templates for django-allauth"
authors = ["kai <thuan.dv0@gmail.com>"]
repository = "https://github.com/ThuanD/django-allauth-simple-ui"
readme = "README.md"
include = ["allauth_ui/locale/**/*.mo"]
packages = [
    { include = "allauth_ui" },
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
django-allauth = "^65.0.2"
django-bootstrap5 = "^24.3"
jwt = "^1.3.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
